--- a/ui/aboutdialog.ui
+++ b/ui/aboutdialog.ui
@@ -355,7 +355,20 @@
                </property>
               </widget>
              </item>
-             <item row="4" column="1">
+             <item row="5" column="0">
+              <widget class="QLabel" name="static_storage_info">
+               <property name="font">
+                <font>
+                 <weight>75</weight>
+                 <bold>true</bold>
+                </font>
+               </property>
+               <property name="text">
+                <string>Storage Capacity:</string>
+               </property>
+              </widget>
+             </item>
+             <item row="6" column="0">
               <spacer name="verticalSpacer_3">
                <property name="orientation">
                 <enum>Qt::Vertical</enum>
@@ -367,6 +380,13 @@
                 </size>
                </property>
               </spacer>
+             </item>
+             <item row="5" column="1">
+              <widget class="QLabel" name="l_storage_capacity">
+               <property name="text">
+                <string notr="true"/>
+               </property>
+              </widget>
              </item>
             </layout>
            </item>
