--- a/resources.qrc
+++ b/resources.qrc
@@ -15,5 +15,6 @@
     <qresource prefix="/i18n">
         <file alias="nitrokey_de_DE.qm">i18n/nitrokey_de_DE.qm</file>
         <file alias="nitrokey_en.qm">i18n/nitrokey_en.qm</file>
+        <file alias="nitrokey_arabic.qm">i18n/nitrokey_arabic.qm</file>
     </qresource>
 </RCC>
